--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  firebase_auth: ^5.6.2
+  firebase_core: ^3.15.1
   flutter:
     sdk: flutter
   flutter_svg: ^2.2.0
