--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,10 @@ dependencies:
   firebase_core: ^3.15.1
   flutter:
     sdk: flutter
+  flutter_map: ^8.1.1
   flutter_svg: ^2.2.0
+  latlong2: ^0.9.1
+  location: ^8.0.1
 
   
 
