--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_core: ^3.15.1
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.2.1
   flutter_map: ^8.1.1
   flutter_svg: ^2.2.0
   latlong2: ^0.9.1
@@ -65,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
   fonts:
     - family: Inter
       fonts:
