--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flutter_map: ^8.1.1
   flutter_svg: ^2.2.0
+  geocoding: ^4.0.0
+  image_picker: ^1.1.2
   latlong2: ^0.9.1
   location: ^8.0.1
 
