--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.2.1
   flutter_map: ^8.1.1
+  flutter_riverpod: ^2.6.1
   flutter_svg: ^2.2.0
   geocoding: ^4.0.0
   image_picker: ^1.1.2
@@ -57,6 +58,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  custom_lint: ^0.7.6
+  riverpod_lint: ^2.6.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
