--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   latlong2: ^0.9.1
   location: ^8.0.1
   path_provider: ^2.1.5
+  skeletonizer: ^2.1.0+1
   supabase_flutter: ^2.9.1
   uuid: ^4.5.1
   vector_map_tiles: ^9.0.0-beta.8
