--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   location: ^8.0.1
   path_provider: ^2.1.5
   skeletonizer: ^2.1.0+1
+  staggered_grid_view: ^0.0.1
   supabase_flutter: ^2.9.1
   uuid: ^4.5.1
   vector_map_tiles: ^9.0.0-beta.8
@@ -84,6 +85,7 @@ flutter:
         - asset: assets/fonts/Inter-Regular.ttf
         - asset: assets/fonts/Inter-Bold.ttf
         - asset: assets/fonts/Inter-ExtraBold.ttf
+        - asset: assets/fonts/Inter-Medium.ttf
         - asset: assets/fonts/Inter-Regular.ttf
         - asset: assets/fonts/Inter-SemiBold.ttf
         - asset: assets/fonts/Inter-ExtraLight.ttf
